# build-monitor

./: .gitignore  LICENSE  README.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: rebuild-and-reload.sh
src/gha_tray_monitor/: __init__.py  __main__.py  config.py  github_api.py  models.py  monitor.py  runtime_checks.py  tray_app.py
tests/: test_github_api.py  test_main.py  test_monitor.py  test_runtime_checks.py  test_tray_app.py
